[package]
name = "beaverlens-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
thirtyfour = "0.31.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.188"
futures = "0.3.28"
dotenvy = "0.15.7"
poise = "0.6.1"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

[dependencies.nescookie]
path = "nescookie"
